[project]
name = "folio-edge-ai"
version = "0.3.0"
description = "Edge FOLIO Module for AI interactions"
license = "Apache2"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "folioclient>=0.70.1",
    "pydantic-ai>=0.2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
]
