[project]
name = "folio-edge-ai"
version = "0.4.0"
description = "Edge FOLIO Module for AI interactions"
license = "Apache2"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "fastapi-mcp>=0.4.0",
    "fastapi[standard]>=0.128.0",
    "folioclient>=1.0.4",
    "pydantic-ai>=1.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]
